[package]
name = "kmer_edge_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debruijn = "0.3.4"
ndarray = "*"
bio = "*"
plotters ="*"
rayon = "*"
regex = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "*"
env_logger = "*"
rayon-progress = "*"